<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">
  <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="0dp"
                  android:paddingStart="10dp" android:paddingEnd="0dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"       
        android:paddingStart="10dp" android:paddingEnd="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="0dp"
                  android:paddingStart="10dp" android:paddingEnd="0dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
         <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>        
    </LinearLayout>
      <TextView android:id="@+id/data_code"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
    <Button
        android:id="@+id/buttonTwoMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Parking (1 Unit) " />          
    <Button
        android:id="@+id/buttonSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="      Vend       " />
	 <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="      Reset       " />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:dividerPadding="0dp"
        android:orientation="horizontal"                
        android:paddingStart="10dp" android:paddingEnd="0dp">
       <EditText
            android:id="@+id/editURI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" 
            android:maxLength="18" >
            <requestFocus />
        </EditText>
        <Button
       	android:id="@+id/buttonURI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text=" Write URI " />
        </LinearLayout>
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:dividerPadding="0dp"
        android:orientation="horizontal"                
        android:paddingStart="10dp" android:paddingEnd="0dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="Set Power:" 
                  android:textSize="14sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <Button
        android:id="@+id/buttonNear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text=" Near "/>
        <Button
        android:id="@+id/buttonMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="Medium"/>
        <Button
        android:id="@+id/buttonFar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="  Far "/>
        </LinearLayout>
	   
	    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:dividerPadding="0dp"
        android:orientation="horizontal"                
        android:paddingStart="10dp" android:paddingEnd="0dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="Beacon::" 
                  android:textSize="14sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <Button
        android:id="@+id/buttonOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="On " />
         <Button
       	android:id="@+id/buttonOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="Off" />
        </LinearLayout>
        
    <ExpandableListView android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>